Fix word-wrap in icon text (bug 874925)

--- a/media/css/ecosystem/landing.styl
+++ b/media/css/ecosystem/landing.styl
@@ -235,6 +235,7 @@ faded-border() {
                 padding: 0 5px;
                 text-align: center;
                 width: 70px;
+                word-wrap: normal;
             }
         }
 
